# raytracing_the_next_week

./: README.md  meson.build
include/: aabb.h  bvh.h  camera.h  hittable.h  hittable_list.h  image.h  interval.h  material.h  perlin.h  quad.h  ray.h  scene.h  sphere.h  texture.h  utils.h
src/: aabb.c  bvh.c  camera.c  hittable.c  hittable_list.c  image.c  interval.c  main.c  material.c  perlin.c  quad.c  scene.c  sphere.c  texture.c  utils.c  vec.c
